update gitignore and readme

--- a/.vim/coc-settings.json
+++ b/.vim/coc-settings.json
@@ -1,4 +1,8 @@
 {
+  "coc.preferences.currentFunctionSymbolAutoUpdate": true,
+  "coc.preferences.formatOnSaveFiletypes": ["typescript", "typescriptreact", "rust", "elm", "c", "cpp", "html", "go", "haskell", "prisma"],
+  "javascript.referencesCodeLens.enable": false,
   "suggest.enablePreselect": false,
   "suggest.noselect": true,
+  "typescript.referencesCodeLens.enable": false
 }
